[package]
name = "game_thing"
version = "0.0.2"
authors = ["AnActualEmerald <kevinliger13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simplelog =  "0.9.0"
log = "0.4.14"
bevy = "0.4.0"
chrono = "0.4.19"
rand = "0.8.3"
