[package]
name = "game_thing"
version = "0.0.2"
authors = ["AnActualEmerald <kevinliger13@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simplelog =  "0.11.2"
log = "0.4.14"
chrono = "0.4.19"
rand = "0.8.3"
bevy_rapier2d = "0.12.1"

[dependencies.bevy]
version = "0.6.1"
features = ["mp3"]